[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/character_shop/character_shop.gd" type="Script" id=1]
[ext_resource path="res://game/assets/dice/dice_d6.png" type="Texture" id=3]

[node name="character_shop" type="PopupDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="vscroll" type="ScrollContainer" parent="MarginContainer"]
margin_right = 470.0
margin_bottom = 260.0
scroll_horizontal_enabled = false

[node name="vbox_menu" type="VBoxContainer" parent="MarginContainer/vscroll"]
margin_right = 470.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="scroll_buy_character" type="ScrollContainer" parent="MarginContainer/vscroll/vbox_menu"]
margin_top = 3.0
margin_right = 470.0
margin_bottom = 43.0
scroll_vertical_enabled = false

[node name="hbox_char_container" type="HBoxContainer" parent="MarginContainer/vscroll/vbox_menu/scroll_buy_character"]
margin_right = 470.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/vscroll/vbox_menu/scroll_buy_character/hbox_char_container"]
margin_right = 47.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="MarginContainer/vscroll/vbox_menu/scroll_buy_character/hbox_char_container/VBoxContainer"]
margin_right = 47.0
margin_bottom = 13.0
text = "Jane Doe"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/vscroll/vbox_menu/scroll_buy_character/hbox_char_container/VBoxContainer"]
margin_top = 17.0
margin_right = 47.0
margin_bottom = 17.0

[node name="Sprite2" type="TextureRect" parent="MarginContainer/vscroll/vbox_menu/scroll_buy_character/hbox_char_container/VBoxContainer/CenterContainer"]
margin_left = 23.0
margin_right = 23.0

[node name="Button" type="Button" parent="MarginContainer/vscroll/vbox_menu/scroll_buy_character/hbox_char_container/VBoxContainer"]
margin_top = 21.0
margin_right = 47.0
margin_bottom = 40.0
text = "Buy!"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/vscroll/vbox_menu"]
margin_top = 53.0
margin_right = 470.0
margin_bottom = 57.0

[node name="scroll_dice_upgrade" type="ScrollContainer" parent="MarginContainer/vscroll/vbox_menu"]
margin_top = 67.0
margin_right = 470.0
margin_bottom = 123.0
scroll_vertical_enabled = false

[node name="hbox_upgrade_dice_container" type="HBoxContainer" parent="MarginContainer/vscroll/vbox_menu/scroll_dice_upgrade"]
margin_right = 76.0
margin_bottom = 56.0
size_flags_vertical = 3
custom_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/vscroll/vbox_menu/scroll_dice_upgrade/hbox_upgrade_dice_container"]
margin_right = 76.0
margin_bottom = 56.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/vscroll/vbox_menu/scroll_dice_upgrade/hbox_upgrade_dice_container/VBoxContainer"]
margin_right = 76.0
margin_bottom = 13.0
text = "1D6"
align = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/vscroll/vbox_menu/scroll_dice_upgrade/hbox_upgrade_dice_container/VBoxContainer"]
margin_top = 17.0
margin_right = 76.0
margin_bottom = 33.0
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="MarginContainer/vscroll/vbox_menu/scroll_dice_upgrade/hbox_upgrade_dice_container/VBoxContainer"]
margin_top = 37.0
margin_right = 76.0
margin_bottom = 56.0
text = "Upgrade Dice"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/vscroll/vbox_menu"]
margin_top = 133.0
margin_right = 470.0
margin_bottom = 137.0

[node name="scroll_dice_buy" type="ScrollContainer" parent="MarginContainer/vscroll/vbox_menu"]
margin_top = 147.0
margin_right = 470.0
margin_bottom = 214.0
scroll_vertical_enabled = false

[node name="hbox_buy_dice_container" type="HBoxContainer" parent="MarginContainer/vscroll/vbox_menu/scroll_dice_buy"]
margin_right = 375.0
margin_bottom = 67.0
size_flags_vertical = 3
custom_constants/separation = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/vscroll/vbox_menu/scroll_dice_buy/hbox_buy_dice_container"]
margin_right = 170.0
margin_bottom = 67.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/vscroll/vbox_menu/scroll_dice_buy/hbox_buy_dice_container/VBoxContainer2"]
margin_right = 170.0
margin_bottom = 29.0
text = "Strengthen your Champions!
They could use the help."

[node name="buy_health_button" type="Button" parent="MarginContainer/vscroll/vbox_menu/scroll_dice_buy/hbox_buy_dice_container/VBoxContainer2"]
margin_top = 29.0
margin_right = 170.0
margin_bottom = 48.0
text = "Increase Max HP (5 Gold)"

[node name="buy_health_5x_button" type="Button" parent="MarginContainer/vscroll/vbox_menu/scroll_dice_buy/hbox_buy_dice_container/VBoxContainer2"]
margin_top = 48.0
margin_right = 170.0
margin_bottom = 67.0
text = "Increase Max HP (x5) (25 Gold)"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/vscroll/vbox_menu/scroll_dice_buy/hbox_buy_dice_container"]
margin_left = 190.0
margin_right = 375.0
margin_bottom = 67.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/vscroll/vbox_menu/scroll_dice_buy/hbox_buy_dice_container/VBoxContainer"]
margin_right = 185.0
margin_bottom = 29.0
text = "Buy a new Starter Dice!
Gotta spend money to make money."

[node name="buy_new_dice" type="Button" parent="MarginContainer/vscroll/vbox_menu/scroll_dice_buy/hbox_buy_dice_container/VBoxContainer"]
margin_top = 29.0
margin_right = 185.0
margin_bottom = 48.0
text = "Purchase New Dice (10 Gold)"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/vscroll/vbox_menu"]
margin_top = 224.0
margin_right = 470.0
margin_bottom = 228.0

[node name="HBoxContainer" type="HSplitContainer" parent="MarginContainer/vscroll/vbox_menu"]
margin_top = 238.0
margin_right = 470.0
margin_bottom = 257.0

[node name="gold_label" type="Label" parent="MarginContainer/vscroll/vbox_menu/HBoxContainer"]
margin_top = 3.0
margin_right = 68.0
margin_bottom = 16.0
text = "Your Gold: 50"

[node name="button_close_shop" type="Button" parent="MarginContainer/vscroll/vbox_menu/HBoxContainer"]
margin_left = 404.0
margin_right = 470.0
margin_bottom = 19.0
size_flags_horizontal = 8
text = "Close Shop"

[connection signal="pressed" from="MarginContainer/vscroll/vbox_menu/scroll_dice_buy/hbox_buy_dice_container/VBoxContainer2/buy_health_button" to="." method="_on_buy_health_button_pressed"]
[connection signal="pressed" from="MarginContainer/vscroll/vbox_menu/scroll_dice_buy/hbox_buy_dice_container/VBoxContainer2/buy_health_5x_button" to="." method="_on_buy_health_5x_button_pressed"]
[connection signal="pressed" from="MarginContainer/vscroll/vbox_menu/scroll_dice_buy/hbox_buy_dice_container/VBoxContainer/buy_new_dice" to="." method="_on_buy_new_dice_pressed"]
[connection signal="pressed" from="MarginContainer/vscroll/vbox_menu/HBoxContainer/button_close_shop" to="." method="_on_button_close_shop_pressed"]
